--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="description">Este app foi feito para que você possa conhecer tudo isso de uma maneira simples e divertida.</string>
     <string name="button_characters">Personagens</string>
     <string name="button_places">Lugares</string>
+    <string name="tool_bar_label">Tool Bar</string>
 </resources>
