--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="button_characters">Personagens</string>
     <string name="button_places">Lugares</string>
     <string name="tool_bar_label">Tool Bar</string>
+    <string name="race">Raça:</string>
+    <string name="status">Status:</string>
+    <string name="origin">Origem:</string>
 </resources>
