location detail and view model implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="race">Raça:</string>
     <string name="status">Status:</string>
     <string name="origin">Origem:</string>
+    <string name="id">ID:</string>
+    <string name="type">Tipo:</string>
+    <string name="dimension">Dimenção:</string>
 </resources>
